Bug fix: on firefox-android, :not(figure.wp-block-gallery) is an invalid selector See https://bugzilla.mozilla.org/show_bug.cgi?id=933562

--- a/assets/styles/pages/_gallery.scss
+++ b/assets/styles/pages/_gallery.scss
@@ -26,7 +26,7 @@
 }
 
 // CSS selector for the gallery 'other content' (serving as description)
-$other-content: ':not(nav):not(figure.wp-block-gallery)';
+$other-content: ':not(nav):not(.wp-block-gallery)';
 
 body.single-format-gallery {
     margin: 30px;
